--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p>for best experience, I suggest you to use a computer.</p>
         </div>
 
+
         <div class="card_swiper" data-view="0">
         
             <div class="card_groups" onclick="choose()">
@@ -97,6 +98,14 @@
                 </div>
             </div>
 
+            <div class="slider">
+                <div class="card">
+                    <i class="fa-solid fa-backward"></i></div>
+                <div class="card" onclick="compact()">slide here</div>
+                <div class="card">
+                    <i class="fa-solid fa-forward"></i></div>
+            </div>
+            
             <div class="card_change">
                 <button id="back" onclick="backClick()">
                     <i class="fa-solid fa-backward"></i>
