--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             <div class="slider">
                 <div class="card">
                     <i class="fa-solid fa-backward"></i></div>
-                <div class="card" onclick="compact()">slide here</div>
+                <div class="card" onclick="compact()">
+                    <p>slide here press here to go back too</p></div>
                 <div class="card"> 
                     <i class="fa-solid fa-forward"></i></div>
             </div>
