--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="card">
                     <i class="fa-solid fa-backward"></i></div>
                 <div class="card" onclick="compact()">
-                    <p>slide here press here to go back too</p></div>
+                    <p>slide here or press here to go back too</p></div>
                 <div class="card"> 
                     <i class="fa-solid fa-forward"></i></div>
             </div>
