--- a/index.html
+++ b/index.html
@@ -98,15 +98,6 @@
                 </div>
             </div>
 
-            <div class="slider">
-                <div class="card">
-                    <i class="fa-solid fa-backward"></i></div>
-                <div class="card" onclick="compact()">
-                    <p>slide here press here to go back too</p></div>
-                <div class="card"> 
-                    <i class="fa-solid fa-forward"></i></div>
-            </div>
-            
             <div class="card_change">
                 <button id="back" onclick="backClick()">
                     <i class="fa-solid fa-backward"></i>
@@ -120,6 +111,16 @@
                     <i class="fa-solid fa-forward"></i>
                 </button>
             </div>
+
+            <div class="slider">
+                <div class="card">
+                    <i class="fa-solid fa-backward"></i></div>
+                <div class="card" onclick="compact()">
+                    <p>slide here or press here to go back too</p></div>
+                <div class="card"> 
+                    <i class="fa-solid fa-forward"></i></div>
+            </div>
+            
         </div>
 
         <script src="./index.js"></script>
